Fixes #16085.  Add dijitInline and white-space:nowrap (to emulate NOBR) to VerticalSlider's decoration container so that child DIVs are packed in.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@29842 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1804,6 +1804,7 @@ div.dijitTabDisabled, .dj_ie div.dijitTabDisabled {
 
 .dijitSliderDecorationV {
 	height: 100%;
+	white-space: nowrap;
 }
 
 .dijitSliderButton {
